Fix #47
